--- a/Asthma.ipynb
+++ b/Asthma.ipynb
@@ -98,9 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ksmur\\Anaconda3\\envs\\pandas\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -130,6 +142,7 @@
        "      <th>|| || ||</th>\n",
        "      <th>Prevalence (number)</th>\n",
        "      <th>95% CI* (number)</th>\n",
+       "      <th>Year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -143,6 +156,7 @@
        "      <td>||</td>\n",
        "      <td>563908.0</td>\n",
        "      <td>(518,048–609,768)</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -154,6 +168,7 @@
        "      <td>||</td>\n",
        "      <td>78995.0</td>\n",
        "      <td>(67,042–90,948)</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -165,6 +180,7 @@
        "      <td>||</td>\n",
        "      <td>771201.0</td>\n",
        "      <td>(709,808–832,595)</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -176,6 +192,7 @@
        "      <td>||</td>\n",
        "      <td>327559.0</td>\n",
        "      <td>(285,053–370,066)</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -187,6 +204,7 @@
        "      <td>||</td>\n",
        "      <td>3895034.0</td>\n",
        "      <td>(3,657,836–4,132,232)</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -200,15 +218,15 @@
        "4    AR         5279.0                  14.3            0.91   \n",
        "5    CA        11370.0                  12.8            0.39   \n",
        "\n",
-       "  95% CI* (percent) || || ||  Prevalence (number)       95% CI* (number)  \n",
-       "1       (13.8–16.1)       ||             563908.0      (518,048–609,768)  \n",
-       "2       (12.1–16.4)       ||              78995.0        (67,042–90,948)  \n",
-       "3       (13.5–15.7)       ||             771201.0      (709,808–832,595)  \n",
-       "4       (12.6–16.1)       ||             327559.0      (285,053–370,066)  \n",
-       "5       (12.1–13.6)       ||            3895034.0  (3,657,836–4,132,232)  "
+       "  95% CI* (percent) || || ||  Prevalence (number)       95% CI* (number)  Year  \n",
+       "1       (13.8–16.1)       ||             563908.0      (518,048–609,768)  2016  \n",
+       "2       (12.1–16.4)       ||              78995.0        (67,042–90,948)  2016  \n",
+       "3       (13.5–15.7)       ||             771201.0      (709,808–832,595)  2016  \n",
+       "4       (12.6–16.1)       ||             327559.0      (285,053–370,066)  2016  \n",
+       "5       (12.1–13.6)       ||            3895034.0  (3,657,836–4,132,232)  2016  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,14 +240,28 @@
     "df_asthma_2016=df_2016[0]\n",
     "\n",
     "asthma_2016 =df_asthma_2016.iloc[1:]\n",
+    "\n",
+    "asthma_2016['Year']='2016'\n",
     "asthma_2016.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ksmur\\Anaconda3\\envs\\pandas\\lib\\site-packages\\ipykernel_launcher.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  # This is added back by InteractiveShellApp.init_path()\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -259,6 +291,7 @@
        "      <th>|| || ||</th>\n",
        "      <th>Prevalence (number)</th>\n",
        "      <th>95% CI* (number)</th>\n",
+       "      <th>Year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -272,6 +305,7 @@
        "      <td>||</td>\n",
        "      <td>586899.0</td>\n",
        "      <td>(542,879 – 630,918)</td>\n",
+       "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -283,6 +317,7 @@
        "      <td>||</td>\n",
        "      <td>73931.0</td>\n",
        "      <td>(62,413 – 85,448)</td>\n",
+       "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -294,6 +329,7 @@
        "      <td>||</td>\n",
        "      <td>812312.0</td>\n",
        "      <td>(747,644 – 876,981)</td>\n",
+       "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -305,6 +341,7 @@
        "      <td>||</td>\n",
        "      <td>364673.0</td>\n",
        "      <td>(319,408 – 409,939)</td>\n",
+       "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -316,6 +353,7 @@
        "      <td>||</td>\n",
        "      <td>3859786.0</td>\n",
        "      <td>(3,626,298 – 4,093,275)</td>\n",
+       "      <td>2015</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -329,15 +367,15 @@
        "4    AR       5234.0                  16.1            0.96     (14.2 – 18.0)   \n",
        "5    CA      12568.0                  12.9            0.39     (12.1 – 13.6)   \n",
        "\n",
-       "  || || ||  Prevalence (number)         95% CI* (number)  \n",
-       "1       ||             586899.0      (542,879 – 630,918)  \n",
-       "2       ||              73931.0        (62,413 – 85,448)  \n",
-       "3       ||             812312.0      (747,644 – 876,981)  \n",
-       "4       ||             364673.0      (319,408 – 409,939)  \n",
-       "5       ||            3859786.0  (3,626,298 – 4,093,275)  "
+       "  || || ||  Prevalence (number)         95% CI* (number)  Year  \n",
+       "1       ||             586899.0      (542,879 – 630,918)  2015  \n",
+       "2       ||              73931.0        (62,413 – 85,448)  2015  \n",
+       "3       ||             812312.0      (747,644 – 876,981)  2015  \n",
+       "4       ||             364673.0      (319,408 – 409,939)  2015  \n",
+       "5       ||            3859786.0  (3,626,298 – 4,093,275)  2015  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,14 +389,28 @@
     "df_asthma_2015=df_2015[0]\n",
     "\n",
     "asthma_2015 =df_asthma_2015.iloc[1:]\n",
+    "\n",
+    "asthma_2015['Year']='2015'\n",
     "asthma_2015.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ksmur\\Anaconda3\\envs\\pandas\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -388,63 +440,69 @@
        "      <th>|| || ||</th>\n",
        "      <th>Prevalence (number)</th>\n",
        "      <th>95% CI* (number)</th>\n",
+       "      <th>Year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AL</td>\n",
-       "      <td>7924.0</td>\n",
-       "      <td>15.6</td>\n",
-       "      <td>0.58</td>\n",
-       "      <td>(14.5 – 16.8)</td>\n",
+       "      <td>8620.0</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>(13.5 – 15.7)</td>\n",
        "      <td>||</td>\n",
-       "      <td>586899.0</td>\n",
-       "      <td>(542,879 – 630,918)</td>\n",
+       "      <td>542973.0</td>\n",
+       "      <td>(500,848 – 585,098)</td>\n",
+       "      <td>2014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AK</td>\n",
-       "      <td>3642.0</td>\n",
-       "      <td>13.4</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>(11.4 – 15.4)</td>\n",
+       "      <td>4375.0</td>\n",
+       "      <td>12.4</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>(11.1 – 13.8)</td>\n",
        "      <td>||</td>\n",
-       "      <td>73931.0</td>\n",
-       "      <td>(62,413 – 85,448)</td>\n",
+       "      <td>68955.0</td>\n",
+       "      <td>(61,153 – 76,756)</td>\n",
+       "      <td>2014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AZ</td>\n",
-       "      <td>7912.0</td>\n",
-       "      <td>15.7</td>\n",
-       "      <td>0.61</td>\n",
-       "      <td>(14.5 – 16.9)</td>\n",
+       "      <td>14821.0</td>\n",
+       "      <td>14.3</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>(13.3 – 15.3)</td>\n",
        "      <td>||</td>\n",
-       "      <td>812312.0</td>\n",
-       "      <td>(747,644 – 876,981)</td>\n",
+       "      <td>725658.0</td>\n",
+       "      <td>(674,592 – 776,723)</td>\n",
+       "      <td>2014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>AR</td>\n",
-       "      <td>5234.0</td>\n",
-       "      <td>16.1</td>\n",
-       "      <td>0.96</td>\n",
-       "      <td>(14.2 – 18.0)</td>\n",
+       "      <td>5245.0</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>(11.9 – 14.8)</td>\n",
        "      <td>||</td>\n",
-       "      <td>364673.0</td>\n",
-       "      <td>(319,408 – 409,939)</td>\n",
+       "      <td>300882.0</td>\n",
+       "      <td>(267,523 – 334,240)</td>\n",
+       "      <td>2014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>CA</td>\n",
-       "      <td>12568.0</td>\n",
-       "      <td>12.9</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>(12.1 – 13.6)</td>\n",
+       "      <td>8806.0</td>\n",
+       "      <td>12.7</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>(11.8 – 13.5)</td>\n",
        "      <td>||</td>\n",
-       "      <td>3859786.0</td>\n",
-       "      <td>(3,626,298 – 4,093,275)</td>\n",
+       "      <td>3726172.0</td>\n",
+       "      <td>(3,466,949 – 3,985,395)</td>\n",
+       "      <td>2014</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -452,21 +510,21 @@
       ],
       "text/plain": [
        "  State  Sample Size  Prevalence (percent)  Standard Error 95% CI* (percent)  \\\n",
-       "1    AL       7924.0                  15.6            0.58     (14.5 – 16.8)   \n",
-       "2    AK       3642.0                  13.4            1.02     (11.4 – 15.4)   \n",
-       "3    AZ       7912.0                  15.7            0.61     (14.5 – 16.9)   \n",
-       "4    AR       5234.0                  16.1            0.96     (14.2 – 18.0)   \n",
-       "5    CA      12568.0                  12.9            0.39     (12.1 – 13.6)   \n",
+       "1    AL       8620.0                  14.6            0.56     (13.5 – 15.7)   \n",
+       "2    AK       4375.0                  12.4            0.70     (11.1 – 13.8)   \n",
+       "3    AZ      14821.0                  14.3            0.49     (13.3 – 15.3)   \n",
+       "4    AR       5245.0                  13.3            0.74     (11.9 – 14.8)   \n",
+       "5    CA       8806.0                  12.7            0.44     (11.8 – 13.5)   \n",
        "\n",
-       "  || || ||  Prevalence (number)         95% CI* (number)  \n",
-       "1       ||             586899.0      (542,879 – 630,918)  \n",
-       "2       ||              73931.0        (62,413 – 85,448)  \n",
-       "3       ||             812312.0      (747,644 – 876,981)  \n",
-       "4       ||             364673.0      (319,408 – 409,939)  \n",
-       "5       ||            3859786.0  (3,626,298 – 4,093,275)  "
+       "  || || ||  Prevalence (number)         95% CI* (number)  Year  \n",
+       "1       ||             542973.0      (500,848 – 585,098)  2014  \n",
+       "2       ||              68955.0        (61,153 – 76,756)  2014  \n",
+       "3       ||             725658.0      (674,592 – 776,723)  2014  \n",
+       "4       ||             300882.0      (267,523 – 334,240)  2014  \n",
+       "5       ||            3726172.0  (3,466,949 – 3,985,395)  2014  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,14 +538,28 @@
     "df_asthma_2014=df_2014[0]\n",
     "\n",
     "asthma_2014 =df_asthma_2014.iloc[1:]\n",
+    "\n",
+    "asthma_2014['Year']='2014'\n",
     "asthma_2014.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ksmur\\Anaconda3\\envs\\pandas\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -517,6 +589,7 @@
        "      <th>|| || ||</th>\n",
        "      <th>Prevalence (number)</th>\n",
        "      <th>95% CI* (number)</th>\n",
+       "      <th>Year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -530,6 +603,7 @@
        "      <td>||</td>\n",
        "      <td>504811.0</td>\n",
        "      <td>(459,449 – 550,172)</td>\n",
+       "      <td>2013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -541,6 +615,7 @@
        "      <td>||</td>\n",
        "      <td>81577.0</td>\n",
        "      <td>(72,193 – 90,961)</td>\n",
+       "      <td>2013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -552,6 +627,7 @@
        "      <td>||</td>\n",
        "      <td>730378.0</td>\n",
        "      <td>(642,838 – 817,919)</td>\n",
+       "      <td>2013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -563,6 +639,7 @@
        "      <td>||</td>\n",
        "      <td>294578.0</td>\n",
        "      <td>(263,444 – 325,712)</td>\n",
+       "      <td>2013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -574,6 +651,7 @@
        "      <td>||</td>\n",
        "      <td>4198521.0</td>\n",
        "      <td>(3,940,609 – 4,456,432)</td>\n",
+       "      <td>2013</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -587,15 +665,15 @@
        "4    AR       5248.0                  13.1            0.69     (11.8 – 14.5)   \n",
        "5    CA      11500.0                  14.4            0.44     (13.5 – 15.2)   \n",
        "\n",
-       "  || || ||  Prevalence (number)         95% CI* (number)  \n",
-       "1       ||             504811.0      (459,449 – 550,172)  \n",
-       "2       ||              81577.0        (72,193 – 90,961)  \n",
-       "3       ||             730378.0      (642,838 – 817,919)  \n",
-       "4       ||             294578.0      (263,444 – 325,712)  \n",
-       "5       ||            4198521.0  (3,940,609 – 4,456,432)  "
+       "  || || ||  Prevalence (number)         95% CI* (number)  Year  \n",
+       "1       ||             504811.0      (459,449 – 550,172)  2013  \n",
+       "2       ||              81577.0        (72,193 – 90,961)  2013  \n",
+       "3       ||             730378.0      (642,838 – 817,919)  2013  \n",
+       "4       ||             294578.0      (263,444 – 325,712)  2013  \n",
+       "5       ||            4198521.0  (3,940,609 – 4,456,432)  2013  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,6 +687,8 @@
     "df_asthma_2013=df_2013[0]\n",
     "\n",
     "asthma_2013 =df_asthma_2013.iloc[1:]\n",
+    "\n",
+    "asthma_2013['Year']='2013'\n",
     "asthma_2013.head()"
    ]
   },
@@ -622,7 +702,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pandas] *",
+   "display_name": "Python [conda env:pandas]",
    "language": "python",
    "name": "conda-env-pandas-py"
   },
@@ -636,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
