Modified column names in Asthma.

--- a/Asthma.ipynb
+++ b/Asthma.ipynb
@@ -3282,7 +3282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3306,10 +3306,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Sample Size</th>\n",
-       "      <th>Prevalence (percent)</th>\n",
+       "      <th>Asthma Sample Size</th>\n",
+       "      <th>Asthma Prevalence (%)</th>\n",
        "      <th>Standard Error</th>\n",
-       "      <th>95% CI* (percent)</th>\n",
+       "      <th>95% CI* (%)</th>\n",
        "      <th>Year</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3816,38 +3816,38 @@
        "</div>"
       ],
       "text/plain": [
-       "       Sample Size  Prevalence (percent)  Standard Error 95% CI* (percent)  \\\n",
-       "State                                                                        \n",
-       "AK          4564.0                  14.8            0.83     (13.2 – 16.4)   \n",
-       "AK          4375.0                  12.4            0.70     (11.1 – 13.8)   \n",
-       "AK          3642.0                  13.4            1.02     (11.4 – 15.4)   \n",
-       "AK          2906.0                  14.2            1.08       (12.1–16.4)   \n",
-       "AL          6484.0                  13.6            0.61     (12.4 – 14.8)   \n",
-       "...            ...                   ...             ...               ...   \n",
-       "WV          7125.0                  16.2            0.55       (15.1–17.3)   \n",
-       "WY          6430.0                  14.1            0.64     (12.9 – 15.4)   \n",
-       "WY          6393.0                  12.0            0.69     (10.6 – 13.3)   \n",
-       "WY          5465.0                  13.5            0.79     (12.0 – 15.0)   \n",
-       "WY          4487.0                  13.9            0.86       (12.2–15.6)   \n",
+       "       Asthma Sample Size  Asthma Prevalence (%)  Standard Error  \\\n",
+       "State                                                              \n",
+       "AK                 4564.0                   14.8            0.83   \n",
+       "AK                 4375.0                   12.4            0.70   \n",
+       "AK                 3642.0                   13.4            1.02   \n",
+       "AK                 2906.0                   14.2            1.08   \n",
+       "AL                 6484.0                   13.6            0.61   \n",
+       "...                   ...                    ...             ...   \n",
+       "WV                 7125.0                   16.2            0.55   \n",
+       "WY                 6430.0                   14.1            0.64   \n",
+       "WY                 6393.0                   12.0            0.69   \n",
+       "WY                 5465.0                   13.5            0.79   \n",
+       "WY                 4487.0                   13.9            0.86   \n",
        "\n",
-       "       Year  \n",
-       "State        \n",
-       "AK     2013  \n",
-       "AK     2014  \n",
-       "AK     2015  \n",
-       "AK     2016  \n",
-       "AL     2013  \n",
-       "...     ...  \n",
-       "WV     2016  \n",
-       "WY     2013  \n",
-       "WY     2014  \n",
-       "WY     2015  \n",
-       "WY     2016  \n",
+       "         95% CI* (%)  Year  \n",
+       "State                       \n",
+       "AK     (13.2 – 16.4)  2013  \n",
+       "AK     (11.1 – 13.8)  2014  \n",
+       "AK     (11.4 – 15.4)  2015  \n",
+       "AK       (12.1–16.4)  2016  \n",
+       "AL     (12.4 – 14.8)  2013  \n",
+       "...              ...   ...  \n",
+       "WV       (15.1–17.3)  2016  \n",
+       "WY     (12.9 – 15.4)  2013  \n",
+       "WY     (10.6 – 13.3)  2014  \n",
+       "WY     (12.0 – 15.0)  2015  \n",
+       "WY       (12.2–15.6)  2016  \n",
        "\n",
        "[204 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3857,6 +3857,7 @@
     "combined_df=combined_df.sort_values(by=['State', 'Year'])\n",
     "combined_df=combined_df.drop(['|| || ||', 'Prevalence (number)', '95% CI* (number)'], axis=1)\n",
     "combined_df=combined_df.set_index('State')\n",
+    "combined_df=combined_df.rename(columns={'Sample Size':'Asthma Sample Size', 'Prevalence (percent)':'Asthma Prevalence (%)', '95% CI* (percent)':'95% CI* (%)'})\n",
     "combined_df"
    ]
   },
