check in of some final tweaks, sql db etc

--- a/Asthma.ipynb
+++ b/Asthma.ipynb
@@ -2,19 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import requests\n",
-    "# import xlrd \n",
-    "import json"
+    "# import xlrd\n",
+    "import json\n",
+    "import os\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy import create_engine, inspect, func\n",
+    "input_dir = 'input_data'\n",
+    "landing_dir = 'landing_data'\n",
+    "cleaned_dir = 'cleaned_data'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +89,7 @@
        "4        Arkansas         AR"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +866,7 @@
        "51       ||              62611.0        (54,696–70,526)  2016  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,19 +895,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ksmur\\Anaconda3\\envs\\pandas\\lib\\site-packages\\pandas\\core\\frame.py:4097: SettingWithCopyWarning: \n",
+      "C:\\Users\\tmher\\Anaconda3\\envs\\pandas\\lib\\site-packages\\pandas\\core\\frame.py:4097: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  errors=errors,\n",
-      "C:\\Users\\ksmur\\Anaconda3\\envs\\pandas\\lib\\site-packages\\ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
+      "C:\\Users\\tmher\\Anaconda3\\envs\\pandas\\lib\\site-packages\\ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1664,7 +1672,7 @@
        "51       ||              60641.0        (53,435 – 67,847)  2015  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1688,14 +1696,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ksmur\\Anaconda3\\envs\\pandas\\lib\\site-packages\\ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
+      "C:\\Users\\tmher\\Anaconda3\\envs\\pandas\\lib\\site-packages\\ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2460,7 +2468,7 @@
        "51       ||              54133.0        (47,894 – 60,372)  2014  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2484,14 +2492,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ksmur\\Anaconda3\\envs\\pandas\\lib\\site-packages\\ipykernel_launcher.py:15: SettingWithCopyWarning: \n",
+      "C:\\Users\\tmher\\Anaconda3\\envs\\pandas\\lib\\site-packages\\ipykernel_launcher.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3256,7 +3264,7 @@
        "51       ||              62845.0        (57,157 – 68,532)  2013  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3282,7 +3290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3847,7 +3855,7 @@
        "[204 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3863,6 +3871,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = os.path.join( landing_dir, 'Asthma.csv')\n",
+    "combined_df.to_csv(output_file, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -3871,7 +3896,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pandas]",
+   "display_name": "Python [conda env:pandas] *",
    "language": "python",
    "name": "conda-env-pandas-py"
   },
