--- a/pollution_groupby_stats.ipynb
+++ b/pollution_groupby_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "#  import numpy as np\n",
     "import json\n",
     "import requests\n",
-    "\n",
+    "from sqlalchemy import create_engine\n",
     "\n",
     "# Python SQL toolkit and Object Relational Mapper\n",
     "import sqlalchemy\n",
@@ -22,12 +22,15 @@
     "# Set up directories\n",
     "input_dir = 'input_data'\n",
     "landing_dir = 'landing_data'\n",
-    "cleaned_dir = 'cleaned_data'"
+    "cleaned_dir = 'cleaned_data'\n",
+    "\n",
+    "PSQL_USER='toddh'\n",
+    "PSQL_PWD='heritage'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +195,7 @@
        "4      3.0  Parts per million  0.216818              0.35  2013.0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +288,7 @@
        "4         AL  Parts per million  0.008167  2013.0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +388,7 @@
        "4  2013.0         CO  Parts per million  0.000083"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +484,7 @@
        "4  2013.0         CO  Parts per million  0.057100"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +613,7 @@
        "10  2013.0         HI  0.028246"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +741,7 @@
        "4     0.057100  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1302,7 @@
        "[155 rows x 5 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1418,7 @@
        "4     0.057100  0.028709  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2106,7 +2109,7 @@
        "[155 rows x 7 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2118,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2222,7 +2225,7 @@
        "4     0.057100  0.028709  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2241,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2345,7 +2348,7 @@
        "4     0.057100  0.028709  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2358,15 +2361,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>State</th>\n",
+       "      <th>O3_Units_Measurement</th>\n",
+       "      <th>O3_min</th>\n",
+       "      <th>O3_max</th>\n",
+       "      <th>O3_Mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Parts per million</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.026333</td>\n",
+       "      <td>0.012099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>Parts per million</td>\n",
+       "      <td>0.003292</td>\n",
+       "      <td>0.049000</td>\n",
+       "      <td>0.025577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>Parts per million</td>\n",
+       "      <td>0.002000</td>\n",
+       "      <td>0.059750</td>\n",
+       "      <td>0.027973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Parts per million</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.071167</td>\n",
+       "      <td>0.026075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>Parts per million</td>\n",
+       "      <td>0.000083</td>\n",
+       "      <td>0.057100</td>\n",
+       "      <td>0.028709</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year State O3_Units_Measurement    O3_min    O3_max   O3_Mean\n",
+       "0  2013    AL    Parts per million  0.000000  0.026333  0.012099\n",
+       "1  2013    AR    Parts per million  0.003292  0.049000  0.025577\n",
+       "2  2013    AZ    Parts per million  0.002000  0.059750  0.027973\n",
+       "3  2013    CA    Parts per million  0.000000  0.071167  0.026075\n",
+       "4  2013    CO    Parts per million  0.000083  0.057100  0.028709"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats_df=stats_df.rename(columns={'year':'Year', 'State_Abbr':'State', 'O3_Units_min':'O3_Units_Measurement', 'O3_Mean_min':'O3_min', 'O3_Mean_max':'O3_max'})\n",
+    "stats_df=stats_df.drop(['O3_Units_max'], axis=1)\n",
+    "stats_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save to a text file in case of problems with loading\n",
     "OUTPUT_FILE = os.path.join( cleaned_dir, 'cleaned_pollution.csv')\n",
-    "\n",
-    "\n",
-    "\n",
     "stats_df.to_csv(OUTPUT_FILE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "toddh\n",
+      "heritage\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load to the database\n",
+    "\n",
+    "rds_connection_string = f'{PSQL_USER}:{PSQL_PWD}@localhost:5432/pollution'\n",
+    "engine = create_engine(f'postgresql://{rds_connection_string}')\n",
+    "\n",
+    "print(PSQL_USER)\n",
+    "print(PSQL_PWD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_df.to_sql(name='cleaned_pollution', con=engine, if_exists='append', index=False)"
    ]
   },
   {
