final notebooks? and powerpoint with png of workflow

--- a/asthma_final_clean.ipynb
+++ b/asthma_final_clean.ipynb
@@ -26,14 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -125,12 +118,13 @@
        "4  2013  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#- read input file\n",
     "input_file = os.path.join( landing_dir, 'Asthma.csv')\n",
     "asthma_df = pd.read_csv(input_file)\n",
     "asthma_df.head()\n"
@@ -138,19 +132,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>asthma_sample_size</th>\n",
+       "      <th>asthma_prev_prcnt</th>\n",
+       "      <th>std_err</th>\n",
+       "      <th>95_prcnt_CI_prcnt</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4564.0</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>(13.2 – 16.4)</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4375.0</td>\n",
+       "      <td>12.4</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>(11.1 – 13.8)</td>\n",
+       "      <td>2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3642.0</td>\n",
+       "      <td>13.4</td>\n",
+       "      <td>1.02</td>\n",
+       "      <td>(11.4 – 15.4)</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2906.0</td>\n",
+       "      <td>14.2</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>(12.1–16.4)</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6484.0</td>\n",
+       "      <td>13.6</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>(12.4 – 14.8)</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   asthma_sample_size  asthma_prev_prcnt  std_err 95_prcnt_CI_prcnt  year\n",
+       "0              4564.0               14.8     0.83     (13.2 – 16.4)  2013\n",
+       "1              4375.0               12.4     0.70     (11.1 – 13.8)  2014\n",
+       "2              3642.0               13.4     1.02     (11.4 – 15.4)  2015\n",
+       "3              2906.0               14.2     1.08       (12.1–16.4)  2016\n",
+       "4              6484.0               13.6     0.61     (12.4 – 14.8)  2013"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#- modify column names for database use.\n"
+    "#- modify column names for database use.\n",
+    "asthma_df = asthma_df.rename(columns={\"Asthma Sample Size\": \"asthma_sample_size\", \"Asthma Prevalence (%)\": \"asthma_prev_prcnt\",\\\n",
+    "                          \"Standard Error\": \"std_err\", \"95% CI* (%)\": \"95_prcnt_CI_prcnt\", \"Year\": \"year\"})\n",
+    "asthma_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Write the data out to the cleaned directory \n",
     "output_file = os.path.join( cleaned_dir, 'cleaned_Asthma.csv')\n",
     "asthma_df.to_csv(output_file, index=False)\n"
    ]
